@@ -10,6 +10,7 @@ sqitch-config-usage - Sqitch config usage statement
 
 Config file location
 
+    --local               use local config file
     --user                use user config file
     --system              use system config file
     --local               use repository config file
