@@ -1,0 +1,5 @@
+[core]
+    engine = pg
+
+[core.pg]
+    db_name   = widgets
