@@ -1,6 +1,8 @@
 Revision history for Perl extension App::Sqitch
 
 0.12
+     - Added `--local` option to `sqitch config`.
+     - Renamed `project_file()` to `--local_file()` in App::Sqitch::Config.
 
 0.11  2012-04-27T06:44:54Z
      - Implemented `init` command.
